--- a/src/pages/Landing/LandingPage.css
+++ b/src/pages/Landing/LandingPage.css
@@ -14,7 +14,7 @@
   z-index: 0;
   background-image: url("./../../assets/images/banner-image.jpg");
   background-size: cover;
-  filter: grayscale(100%) contrast(1.2) brightness(0.2);
+  filter: grayscale(100%) contrast(1.2) brightness(0.15);
 }
 
 .land-page > * {
@@ -27,6 +27,7 @@
   flex-direction: column;
   text-align: center;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   color: #ffffff;
@@ -34,26 +35,32 @@
 }
 
 .land-message {
-  margin-top: 7em;
   text-align: left;
   padding: 1rem;
+  margin-bottom: 1em;
 }
 
-.land-message h2 {
-  text-align: left;
-  margin-bottom: 0;
-}
 .land-message h1 {
   margin-top: 0;
+  margin-bottom: 0;
+}
+
+.land-name {
+  color: #0064c8;
+  font-size: 4em;
+}
+
+.land-job {
+  font-size: 1em;
+  text-align: center;
 }
 
 .land-button {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  border: 3px solid #0064c8;
+  border-radius: 0.2em;
+  background: #0064c8;
   transition: all 300ms ease-in-out;
   will-change: transform;
+  margin-bottom: 8em;
 }
 
 .land-button:hover {
@@ -62,8 +69,10 @@
 }
 
 .land-button a {
-  padding: 1em;
+  padding: 0.8em;
   display: block;
-  color: #0064c8;
+  color: rgb(20, 20, 20);
+  font-size: 0.7em;
+  font-weight: bold;
   text-decoration: none;
 }
