--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,17 @@
 
 html {
   background-size: cover;
+  overflow-y: overlay;
 }
 
 .App {
   position: relative;
 }
 
-.Navbar {
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-}
-
 .Content {
-  position: relative;
-  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .content {
@@ -27,8 +23,4 @@ html {
   justify-content: center;
   align-items: center;
   padding: 2em;
-}
-
-.navbar {
-  height: 7.5vh;
 }
