--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,5 +1,5 @@
 .title-wrapper {
-  margin: 2em 0 2em 0;
+  margin-top: 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,6 @@
 
 .title h1 {
   padding: 0;
-  margin-bottom: 0.3em;
 }
 
 .title-hr {
