--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -27,6 +27,8 @@
   border: 3px solid rgb(15, 15, 15);
   max-width: 40em;
   min-height: 10em;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   position: relative;
 }
