--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -27,6 +27,7 @@
   border: 3px solid rgb(15, 15, 15);
   max-width: 40em;
   min-height: 10em;
+  min-width: 15em;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -63,6 +64,7 @@
   width: 100%;
   height: 100%;
   min-height: 15em;
+  min-width: 15em;
   max-width: 40em;
   position: relative;
   background: rgb(20, 20, 20);
