--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,3 @@
-/* Technologies */
-
 .project-card {
   padding: 2em 0 2em 0;
   justify-content: center;
@@ -18,16 +16,13 @@
 }
 
 .card-image {
-  padding: 1em 0em 1em 1em;
-  display: flex;
-  justify-content: center;
+  padding: 2em 0 2em 0;
 }
 
 .image-container {
   border: 3px solid rgb(15, 15, 15);
-  max-width: 40em;
-  min-height: 10em;
   min-width: 15em;
+  max-height: 15em;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -55,9 +50,7 @@
 }
 
 .card-info-wrapper {
-  display: flex;
-  justify-content: center;
-  padding: 1em 0em 1em 0em;
+  padding: 2em 0 2em 0;
 }
 .card-info {
   border: 3px solid rgb(15, 15, 15);
@@ -65,7 +58,6 @@
   height: 100%;
   min-height: 15em;
   min-width: 15em;
-  max-width: 40em;
   position: relative;
   background: rgb(20, 20, 20);
 }
