--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -19,7 +19,7 @@
   top: 0;
   left: 0;
   z-index: -1;
-  background-image: url("./../../assets/images/banner-image.jpg");
+  background-image: url("../assets/images/banner-image.jpg");
   background-size: cover;
   filter: grayscale(100%) contrast(1.2) brightness(0.15);
 }
