--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,17 +8,14 @@
 .title {
   display: flex;
   flex-direction: column;
-  color: #000000;
-  font-size: 1.5em;
-  letter-spacing: -0.1em;
+  color: $headerColor;
+  font-size: 1.5rem;
   align-items: center;
-}
-
-.title h1 {
-  padding: 0;
-}
-
-.title-hr {
-  border-bottom: 2px solid #0064c8;
-  width: 50%;
+  h1 {
+    padding: 0.2rem;
+  }
+  .title-hr {
+    border-bottom: 2px solid #0064c8;
+    width: 150%;
+  }
 }
