--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -4,4 +4,11 @@
   text-align: center;
   margin-bottom: 2em;
   align-items: center;
+  .subheader {
+    color: $paragraphColor;
+    font-size: 1.5rem;
+  }
+  p {
+    color: $paragraphColor;
+  }
 }
