--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
+@import "./app";
+@import "./variables";
+
 //Components
 @import "./navbar";
 @import "./header";
@@ -8,3 +11,16 @@
 @import "./landing";
 @import "./portfolio";
 @import "./contact";
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
